--- a/SecretSanta/src/SecretSanta.Business/SecretSanta.Business.csproj
+++ b/SecretSanta/src/SecretSanta.Business/SecretSanta.Business.csproj
@@ -8,9 +8,12 @@
   <ItemGroup>
     <PackageReference Include="IntelliTect.Analyzers" Version="0.1.5" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\SecretSanta.Data\SecretSanta.Data.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="..\..\GlobalSuppressions.cs" Link="GlobalSuppressions.cs" />
   </ItemGroup>
 
 </Project>
