--- a/SecretSanta/src/SecretSanta.Data/SecretSanta.Data.csproj
+++ b/SecretSanta/src/SecretSanta.Data/SecretSanta.Data.csproj
@@ -1,11 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="IntelliTect.Analyzers" Version="0.1.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="..\..\GlobalSuppressions.cs" Link="GlobalSuppressions.cs" />
   </ItemGroup>
 
 </Project>
