--- a/SecretSanta/src/SecretSanta.Web/SecretSanta.Web.csproj
+++ b/SecretSanta/src/SecretSanta.Web/SecretSanta.Web.csproj
@@ -8,4 +8,7 @@
     <PackageReference Include="IntelliTect.Analyzers" Version="0.1.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Include="..\..\GlobalSuppressions.cs" Link="GlobalSuppressions.cs" />
+  </ItemGroup>
 </Project>
