--- a/SecretSanta/test/SecretSanta.Api.Tests/SecretSanta.Api.Tests.csproj
+++ b/SecretSanta/test/SecretSanta.Api.Tests/SecretSanta.Api.Tests.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
+    <PackageReference Include="Moq" Version="4.13.1" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.0.0" />
     <PackageReference Include="MSTest.TestFramework" Version="2.0.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0">
@@ -16,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\SecretSanta.Api\SecretSanta.Api.csproj" />
+    <ProjectReference Include="..\SecretSanta.Data.Tests\SecretSanta.Data.Tests.csproj" />
   </ItemGroup>
 
 </Project>
