--- a/SecretSanta/src/SecretSanta.Web/SecretSanta.Web.csproj
+++ b/SecretSanta/src/SecretSanta.Web/SecretSanta.Web.csproj
@@ -1,11 +1,27 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
+    <TypescriptComplieBlocked>true</TypescriptComplieBlocked>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="3.7.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="TagHelperPack" Version="0.5.0-pre-20191217.4" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="scripts\" />
+  </ItemGroup>
+    <ItemGroup>
+      <TypeScriptCompile Include="scripts\main.ts" />
+    </ItemGroup>
+    <ItemGroup>
+      <None Include="wwwroot\css\styles.css" />
+    </ItemGroup>
 
 </Project>
