--- a/SecretSanta/src/SecretSanta.Api/appsettings.json
+++ b/SecretSanta/src/SecretSanta.Api/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=Stokes.db"
+    "DefaultConnection": "Data Source=SantaProd.db"
   }
 }
