--- a/SecretSanta/src/SecretSanta.Api/appsettings.Development.json
+++ b/SecretSanta/src/SecretSanta.Api/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=Blog.db"
+    "DefaultConnection": "Data Source=SantaDev.db"
   }
 }
