--- a/SecretSanta/src/SecretSanta.Web/SecretSanta.Web.csproj
+++ b/SecretSanta/src/SecretSanta.Web/SecretSanta.Web.csproj
@@ -5,9 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="scripts\app.ts" />
     <None Remove="scripts\main.ts" />
     <None Remove="scripts\secretsanta-client.ts" />
+    <None Remove="scripts\vue-shim.d.ts" />
   </ItemGroup>
 
   <ItemGroup>
@@ -16,9 +16,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <TypeScriptCompile Include="scripts\app.ts" />
     <TypeScriptCompile Include="scripts\main.ts" />
     <TypeScriptCompile Include="scripts\secretsanta-client.ts" />
+    <TypeScriptCompile Include="scripts\vue-shim.d.ts" />
   </ItemGroup>
 
 </Project>
