--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,5 @@
 # ASP.NET Core
+
 # Build and test ASP.NET Core projects targeting .NET Core.
 # Add steps that run tests, create a NuGet package, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
@@ -14,6 +15,14 @@ variables:
 
 
 steps:
+- task: Npm@1
+  inputs:
+    command: 'install'
+    workingDir: '.\SecretSanta\src\SecretSanta.Web'
+- task: Npm@1
+  inputs:
+    command: 'custom'
+    customCommand: 'run build:prod'
 - task: UseDotNet@2
   inputs:
     packageType: 'sdk'
