Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,10 +18,11 @@ steps:
 - task: Npm@1
   inputs:
     command: 'install'
-    workingDir: '.\SecretSanta\src\SecretSanta.Web'
+    workingDir: './SecretSanta/src/SecretSanta.Web'
 - task: Npm@1
   inputs:
     command: 'custom'
+    workingDir: './SecretSanta/src/SecretSanta.Web'
     customCommand: 'run build:prod'
 - task: UseDotNet@2
   inputs:
