--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,13 +4,13 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
 
 trigger:
-- Assignment*
+- Assignment10
 
 pool:
   vmImage: 'ubuntu-latest'
 
 variables:
-  buildConfiguration: 'Release'
+  BuildConfiguration: 'Release'
 
 
 steps:
@@ -18,6 +18,16 @@ steps:
   inputs:
     packageType: 'sdk'
     version: '3.1.x'
+    
+- task: Npm@1
+  inputs:
+    command: 'install'
+    workingDir: 'SecretSanta/src/SecretSanta.Web'
+- task: Npm@1
+  inputs:
+    command: 'custom'
+    workingDir: 'SecretSanta/src/SecretSanta.Web'
+    customCommand: 'run build:prod'
 - task: DotNetCoreCLI@2
   inputs:
     command: 'build'
@@ -26,3 +36,16 @@ steps:
   inputs:
     command: 'test'
     projects: '**/test/**/*.csproj'
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'publish'
+    publishWebProjects: false
+    projects: |
+      **/SecretSanta.Api.csproj
+      **/SecretSanta.Web.csproj
+    arguments: '--configuration $(BuildConfiguration) --output "$(Build.ArtifactStagingDirectory)"'
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
